--- a/blogpost.html
+++ b/blogpost.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,9 +8,20 @@
     <title>el titulo del post</title>
     <link rel="stylesheet" href="css/estilos.css">
 </head>
+
 <body>
-    <h1>Aqui vamos a hacer un post</h1>
-    <p>y este es el parrafo de inicio</p>
-    
+    <div id="container">
+        <div id="post">
+            <h1>Este es el titulo elaborado por I.S.C. Adolfo</h1>
+            <p>y este es el parrafo de inicio donde vamos
+                a voy a aprender cosas incribles que se pueden hacer
+                con ramas
+            </p>
+        </div>
+
+    </div>
+
+
 </body>
+
 </html>
