--- a/blogpost.html
+++ b/blogpost.html
@@ -17,6 +17,12 @@
                 a voy a aprender cosas incribles que se pueden hacer
                 con ramas
             </p>
+            <p>
+                Los blogs son la mejor forma de compartir informacion 
+                y tus ideas. mucho mas que ir a conferencias o salir
+                en youtube. excepto si eres rockstar. pero estadisticamente
+                no lo eres... por ahora.
+            </p>
         </div>
 
     </div>
