--- a/blogpost.html
+++ b/blogpost.html
@@ -11,7 +11,7 @@
 
 <body>
     <div id="container">
-        <div id="cabecera">Hyperblog <span id="tagline">Tu blog de confianza</span></div>
+        <div id="cabecera">Hyperblog <span id="tagline">Tu blog de cabecera</span></div>
         <div id="post">
             <h1>Este es el titulo elaborado por I.S.C. Adolfo</h1>
             <p>y este es el parrafo de inicio donde vamos
