Agregue suscripcion, cambie la cabecera maestra y puse el texto en azul

--- a/blogpost.html
+++ b/blogpost.html
@@ -11,7 +11,7 @@
 
 <body>
     <div id="container">
-        <div id="cabecera">Hyperblog <span id="tagline">Tu blog de confianza</span></div>
+        <div id="cabecera">Hyperblog <span id="tagline">Tu blog de maestro</span></div>
         <div id="post">
             <h1>Este es el titulo elaborado por I.S.C. Adolfo</h1>
             <p>y este es el parrafo de inicio donde vamos
@@ -24,6 +24,7 @@
                 en youtube. excepto si eres rockstar. pero estadisticamente
                 no lo eres... por ahora.
             </p>
+            <p>suscribete y dale like.</p>
         </div>
 
     </div>
